<resources>
    <string name="app_name">Foodle</string>

    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="playlist">Playlist</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="reportAndFeedback">Report and Feedback</string>
    <string name="signout">Sign Out</string>
    <string name="favourites">Favourites</string>
    <string name="category">Category</string>
</resources>
